# SpectraJNI

./: CMakeLists.txt  README.md  dr_evomodel_substmodel_spectra_SpectraJNIWrapper.cpp  dr_evomodel_substmodel_spectra_SpectraJNIWrapper.h  library.h  spectra_SpectraJNIWrapper.cpp  spectra_SpectraJNIWrapper.h
java/: SpectraJNIWrapper.java
java/src/: Main.java  SpectraJNIWrapper.java
test/: CMakeLists.txt  catch.cpp  test.R  test.cpp
